@@ -43,8 +43,13 @@ class login_error_handler : public error_handler
 };
 
 login_controller::login_controller(const std::string &prefix_path)
-	: http::controller(prefix_path)
+	: html_controller(prefix_path)
 {
+	map_get("login", &login_controller::handle_get_login);
+	map_post("login", &login_controller::handle_post_login, "username", "password");
+
+	map_get("logout", &login_controller::handle_logout);
+	map_post("logout", &login_controller::handle_logout);
 }
 
 void login_controller::set_server(basic_server *server)
@@ -142,123 +147,117 @@ void login_controller::create_unauth_reply(const request &req, reply &reply)
 	reply.set_status(status_type::unauthorized);
 }
 
-bool login_controller::handle_request(request &req, reply &rep)
+reply login_controller::handle_get_login(const scope &scope)
 {
-	bool result = false;
+	auto &req = scope.get_request();
+	auto doc = load_login_form(req);
 
-	std::string uri = get_prefixless_path(req);
+	reply rep = reply::stock_reply(ok);
 
-	if (uri == "login")
+	auto csrf_cookie = req.get_cookie("csrf-token");
+	if (csrf_cookie.empty())
 	{
-		result = true;
+		csrf_cookie = encode_base64url(random_hash());
+		rep.set_cookie("csrf-token", csrf_cookie, { { "HttpOnly", "" }, { "SameSite", "Lax" }, { "Path", "/" } });
+	}
 
-		if (req.get_method() == "GET")
-		{
-			auto doc = load_login_form(req);
+	for (auto csrf : doc.find("//input[@name='_csrf']"))
+		csrf->set_attribute("value", csrf_cookie);
 
-			auto csrf_cookie = req.get_cookie("csrf-token");
-			if (csrf_cookie.empty())
-			{
-				csrf_cookie = encode_base64url(random_hash());
-				rep.set_cookie("csrf-token", csrf_cookie, { { "HttpOnly", "" }, { "SameSite", "Lax" }, { "Path", "/" } });
-			}
+	rep.set_content(doc);
+	return rep;
+}
 
-			for (auto csrf : doc.find("//input[@name='_csrf']"))
-				csrf->set_attribute("value", csrf_cookie);
+reply login_controller::handle_post_login(const scope &scope, const std::string &username, const std::string &password)
+{
+	auto &req = scope.get_request();
+	auto csrf = req.get_parameter("_csrf");
+	if (csrf != req.get_cookie("csrf-token"))
+		throw status_type::forbidden;
 
-			rep.set_content(doc);
-		}
-		else if (req.get_method() == "POST")
-		{
-			auto csrf = req.get_parameter("_csrf");
-			if (csrf != req.get_cookie("csrf-token"))
-				throw status_type::forbidden;
-
-			std::string redirect_to{ "/" };
-			auto context = get_context_name();
-			if (not context.empty())
-			{
-				if (is_fully_qualified_uri(context))
-					redirect_to = context;
-				else
-					redirect_to += context;
-			}
-			uri = req.get_parameter("uri");
-			if (not uri.empty() and not std::regex_match(uri, std::regex(R"(.*login$)")) and is_valid_uri(uri))
-			{
-				if (is_fully_qualified_uri(uri))
-					redirect_to = uri;
-				else
-				{
-					if (redirect_to.back() != '/' and uri.front() != '/')
-						redirect_to += '/';
-					redirect_to += uri;
-				}
-			}
-
-			rep = reply::redirect(redirect_to);
-
-			auto username = req.get_parameter("username");
-			auto password = req.get_parameter("password");
-
-			try
-			{
-				get_server()->get_security_context().verify_username_password(username, password, rep);
-			}
-			catch (const invalid_password_exception &e)
-			{
-				auto doc = load_login_form(req);
-				for (auto csrf_attr : doc.find("//input[@name='_csrf']"))
-					csrf_attr->set_attribute("value", req.get_cookie("csrf-token"));
-
-				auto user = doc.find_first("//input[@name='username']");
-				user->set_attribute("value", username);
-
-				auto pw = doc.find_first("//input[@name='password']");
-				pw->set_attribute("class", pw->get_attribute("class") + " is-invalid");
-
-				for (auto i_uri : doc.find("//input[@name='uri']"))
-					i_uri->set_attribute("value", uri);
-
-				rep.set_content(doc);
-
-				std::cerr << e.what() << '\n';
-			}
-		}
+	std::string redirect_to{ "/" };
+	auto context = get_context_name();
+	if (not context.empty())
+	{
+		if (is_fully_qualified_uri(context))
+			redirect_to = context;
 		else
-			result = false;
+			redirect_to += context;
 	}
-	else if (uri == "logout")
+
+	auto uri = req.get_parameter("uri");
+	if (not uri.empty() and not std::regex_match(uri, std::regex(R"(.*login$)")) and is_valid_uri(uri))
 	{
-		std::string redirect_to{ "/" };
-		auto context = get_context_name();
-		if (not context.empty())
+		if (is_fully_qualified_uri(uri))
+			redirect_to = uri;
+		else
 		{
-			if (is_fully_qualified_uri(context))
-				redirect_to = context;
-			else
-				redirect_to += context;
+			if (redirect_to.back() != '/' and uri.front() != '/')
+				redirect_to += '/';
+			redirect_to += uri;
 		}
-		uri = req.get_parameter("uri");
-		if (not uri.empty() and not std::regex_match(uri, std::regex(R"(.*logout$)")) and is_valid_uri(uri))
-		{
-			if (is_fully_qualified_uri(uri))
-				redirect_to = uri;
-			else
-			{
-				if (redirect_to.back() != '/' and uri.front() != '/')
-					redirect_to += '/';
-				redirect_to += uri;
-			}
-		}
-
-		rep = reply::redirect(redirect_to);
-		rep.set_delete_cookie("access_token");
-
-		result = true;
 	}
 
-	return result;
+	auto rep = reply::redirect(redirect_to);
+
+	try
+	{
+		get_server()->get_security_context().verify_username_password(username, password, rep);
+	}
+	catch (const invalid_password_exception &e)
+	{
+		auto doc = load_login_form(req);
+		for (auto csrf_attr : doc.find("//input[@name='_csrf']"))
+			csrf_attr->set_attribute("value", req.get_cookie("csrf-token"));
+
+		auto user = doc.find_first("//input[@name='username']");
+		user->set_attribute("value", username);
+
+		auto pw = doc.find_first("//input[@name='password']");
+		pw->set_attribute("class", pw->get_attribute("class") + " is-invalid");
+
+		for (auto i_uri : doc.find("//input[@name='uri']"))
+			i_uri->set_attribute("value", uri);
+
+		rep.set_content(doc);
+
+		std::cerr << e.what() << '\n';
+
+	}
+
+	return rep;
+}
+
+reply login_controller::handle_logout(const scope &scope)
+{
+	auto &req = scope.get_request();
+
+	std::string redirect_to{ "/" };
+	auto context = get_context_name();
+	if (not context.empty())
+	{
+		if (is_fully_qualified_uri(context))
+			redirect_to = context;
+		else
+			redirect_to += context;
+	}
+
+	auto uri = req.get_parameter("uri");
+	if (not uri.empty() and not std::regex_match(uri, std::regex(R"(.*logout$)")) and is_valid_uri(uri))
+	{
+		if (is_fully_qualified_uri(uri))
+			redirect_to = uri;
+		else
+		{
+			if (redirect_to.back() != '/' and uri.front() != '/')
+				redirect_to += '/';
+			redirect_to += uri;
+		}
+	}
+
+	auto rep = reply::redirect(redirect_to);
+	rep.set_delete_cookie("access_token");
+	return rep;
 }
 
 } // namespace zeep::http
